--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,22 @@
 h1 {
   font-style: italic;
-  float: right;
-
+  text-align: center;
 }
 body {
-  background-color:  skyblue;
+  background-color: skyblue;
+  background-image: url("../images/download.jpg");
+  background-position: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
 }
 .intro {
   font-style: italic;
 }
 .important {
-float: right;
-border: 2px;
-padding: 6px;
-margin: 0.5px;
-width: auto;
+  border: 2px;
+  padding: 6px;
+  margin: 0.5px;
+  width: auto;
+  text-align: center;
 }
